engine/codex-rs/tui/src/snapshots/codex_tui__transcript_view__tests__terminal_output_disclosure_counts_only_revealable_lines.snap
---
source: tui/src/transcript_view_tests.rs
expression: "frames.join(\"\\n\\n\")"
---
three visible
• Ran echo
  └ a
    b
    c

one hidden
• Ran echo
  └ b
    c
    d
    + 1 line (⌃t to expand)

clipped line
• Ran echo
  └ abcdefghijklmno…
    + 1 line

command only
• Ran echo a …
  └ (no output)
    + Show details

storage truncated
• Running echo
  └ x
    x
    x
    + 97 lines (⌃t to expand)
